--- a/spec/stackpack.xapi.yaml
+++ b/spec/stackpack.xapi.yaml
@@ -380,7 +380,7 @@ components:
             items:
               type: string
         releaseStatus:
-          $ref: "#/components/schemas/FAQ"
+          $ref: "#/components/schemas/ReleaseStatus"
         steps:
           type: array
           items:
