STAC-17630: Capitalize MessageLevel values

--- a/spec/generic_error_handling.xapi.yaml
+++ b/spec/generic_error_handling.xapi.yaml
@@ -71,6 +71,6 @@ components:
     MessageLevel:
       type: string
       enum:
-        - Warn
-        - Error
-        - Info
+        - WARN
+        - ERROR
+        - INFO
