--- a/spec/checks.api.yaml
+++ b/spec/checks.api.yaml
@@ -19,6 +19,7 @@ components:
       type: string
     HealthStateValue:
       enum:
+        - UNINITIALIZED
         - UNKNOWN
         - CLEAR
         - DISABLED
