--- a/spec/kubernetes_logs.api.yaml
+++ b/spec/kubernetes_logs.api.yaml
@@ -14,7 +14,14 @@ paths:
       parameters:
         - $ref: "#/components/parameters/from"
         - $ref: "#/components/parameters/to"
-        - $ref: "#/components/parameters/limit"
+        - $ref: "#/components/parameters/pageSize"
+        - $ref: "#/components/parameters/page"
+        - $ref: "#/components/parameters/query"
+        - $ref: "#/components/parameters/podUID"
+        - $ref: "#/components/parameters/podName"
+        - $ref: "#/components/parameters/containerName"
+        - $ref: "#/components/parameters/containerRestartCount"
+        - $ref: "#/components/parameters/withHistogram"
       responses:
         "200":
           $ref: "#/components/responses/GetKubernetesLogsResult"
@@ -36,12 +43,75 @@ components:
       description: "Logs last timestamp."
       required: false
       schema: { $ref: "#/components/schemas/Instant" }
-    limit:
-      name: limit
+    pageSize:
+      name: pageSize
       in: query
       required: false
-      description: "Maximum number of log lines in thx result."
-      schema: { $ref: "#/components/schemas/Limit" }
+      description: "Maximum number of the log lines in the result."
+      schema:
+        type: integer
+        format: int32
+        minimum: 1
+        maximum: 100
+        default: 25
+    page:
+      name: page
+      in: query
+      required: false
+      description: "Offset for which the log lines of pageSize must be returned."
+      schema:
+        type: integer
+        format: int32
+        minimum: 1
+        maximum: 100
+        default: 1
+    query:
+      name: query
+      in: query
+      required: false
+      description: "Find only logs containing query text."
+      schema:
+        type: string
+        minLength: 3
+    podUID:
+      name: podUID
+      in: query
+      required: false
+      description: "Find only logs for the given pod UID."
+      schema:
+        type: string
+        format: uuid
+    podName:
+      name: podName
+      in: query
+      required: false
+      description: "Find only logs for the given pod name."
+      schema:
+        type: string
+    containerName:
+      name: containerName
+      in: query
+      required: false
+      description: "Find only logs for the given container name."
+      schema:
+        type: string
+    containerRestartCount:
+      name: containerRestartCount
+      in: query
+      required: false
+      description: "Find only logs for the given container restart."
+      schema:
+        type: integer
+        format: int32
+        minimum: 0
+    withHistogram:
+      name: withHistogram
+      in: query
+      required: false
+      description: "Includes logs destribution time histogram in the response."
+      schema:
+        type: boolean
+        default: false
   responses:
     GetKubernetesLogsResult:
       description: Get events causing a problem successfull result
@@ -57,25 +127,33 @@ components:
     Instant:
       type: integer
       format: instant
-    Limit:
-      type: integer
-      format: int32
-      minimum: 1
     GetKubernetesLogsResult:
       type: object
       properties:
         logs:
           type: array
-          items:
-            $ref: "#/components/schemas/KubernetesLogRecord"
+          items: { $ref: "#/components/schemas/KubernetesLogRecord" }
+          description: "List of log records ordered by timestamps in ascend order."
+        pageSize:
+          type: integer
+          description: "Maximum number of the log lines in the result."
+        page:
+          type: integer
+          description: "The requested logs page."
+        matchesTotal:
+          type: integer
+          format: int32
+          description: "The total amount of matching logs for the requested search criteria."
+        histogram: { $ref: "#/components/schemas/KubernetesLogHistogram" }
       required:
         - logs
+        - pageSize
+        - page
+        - matchesTotal
     KubernetesLogRecord:
       type: object
       properties:
-        timestamp:
-          type: integer
-          format: instant
+        timestamp: { $ref: "#/components/schemas/Instant" }
         message:
           type: string
         podName:
@@ -94,9 +172,59 @@ components:
         - podUID
         - containerName
         - containerRestartCount
-    # TODO: Elaborate types of this response
-    GetKubernetesLogsBadRequest:
+    KubernetesLogHistogram:
       type: object
       properties:
+        buckets:
+          type: array
+          items: { $ref: "#/components/schemas/KubernetesLogHistogramBucket" }
+    KubernetesLogHistogramBucket:
+      type: object
+      properties:
+        timestamp: { $ref: "#/components/schemas/Instant" }
+        count:
+          description: "Total logs record count in the bucket."
+          type: integer
+      required:
+        - timestamp
+        - count
+    GetKubernetesLogsBadRequest:
+      oneOf:
+        - $ref: "#/components/schemas/InvalidTimeRange"
+        - $ref: "#/components/schemas/InvalidPagination"
+      discriminator:
+        propertyName: _type
+      required:
+        - _type
+    InvalidTimeRange:
+      type: object
+      properties:
+        _type:
+          type: string
+          enum:
+            - InvalidTimeRange
         message:
           type: string
+        from: { $ref: "#/components/schemas/Instant" }
+        to: { $ref: "#/components/schemas/Instant" }
+      required:
+        - _type
+        - message
+    InvalidPagination:
+      type: object
+      properties:
+        _type:
+          type: string
+          enum:
+            - InvalidPagination
+        message:
+          type: string
+        pageSize:
+          type: integer
+        page:
+          type: integer
+      required:
+        - _type
+        - message
+        - pageSize
+        - page
