STAC-18627: nano timestamps in k8s logs response

--- a/spec/kubernetes_logs.api.yaml
+++ b/spec/kubernetes_logs.api.yaml
@@ -192,7 +192,9 @@ components:
     KubernetesLogRecord:
       type: object
       properties:
-        timestamp: { $ref: "#/components/schemas/Instant" }
+        timestamp:
+          type: string
+          format: date-time
         message:
           type: string
         podName:
