STAC-18720: Fix review comments

--- a/spec/kubernetes_logs.api.yaml
+++ b/spec/kubernetes_logs.api.yaml
@@ -179,6 +179,7 @@ components:
       enum:
         - NEWEST
         - OLDEST
+      default: NEWEST
     GetKubernetesLogsResult:
       type: object
       properties:
