STAc-18729: Add assumed role

--- a/spec/user_profile.api.yaml
+++ b/spec/user_profile.api.yaml
@@ -139,6 +139,8 @@ components:
           type: string
         identifier:
           type: string
+        assumedRole:
+          type: string
         starredViews:
           type: array
           items:
