STAC-18729: Add delete verb

--- a/spec/user_session.api.yaml
+++ b/spec/user_session.api.yaml
@@ -39,8 +39,8 @@ paths:
     put:
       tags:
         - userSession
-      summary: "Assume a role for the current session"
-      description: "Assume a role for the current session."
+      summary: "Set the assumed role for the current session"
+      description: "Set the assumed role for the current session."
       operationId: saveUserSessionAssumedRole
       requestBody:
         required: true
@@ -61,6 +61,27 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/RoleNotAvailableError"
+        "500":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+    delete:
+      tags:
+        - userSession
+      summary: "Unset the assumed role for the current session"
+      description: "Unset the assumed role for the current session."
+      operationId: deleteUserSessionAssumedRole
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Role"
+      responses:
+        "200":
+          description: "Assumed role deletion was a success"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Role"
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 components:
